Pedido do atendimento

--- a/AtendimentoWeb/src/main/webapp/index.xhtml
+++ b/AtendimentoWeb/src/main/webapp/index.xhtml
@@ -7,6 +7,7 @@
 	xmlns:p="http://primefaces.org/ui" >
 	
 	<h:head>
+		<meta name="viewport" content="width=400, user-scalable=no"/>
 	</h:head>
 	
 	<ui:include src="/menu.xhtml" />
