--- a/AtendimentoWeb/src/main/webapp/menu.xhtml
+++ b/AtendimentoWeb/src/main/webapp/menu.xhtml
@@ -16,7 +16,9 @@
 		            <p:separator />
 		            <p:menuitem value="Tipo de Produto" action="/pages/cadastro/produtoTipoCadastro.xhtml" icon="ui-icon-tag" />
 		            <p:separator />
-		            <p:menuitem value="Pedido" action="/pages/cadastro/pedidoCadastro.xhtml" icon="ui-icon-cart" />
+		            <p:menuitem value="Pedido Balcão" action="/pages/cadastro/pedidoCadastro.xhtml" icon="ui-icon-cart" />
+		            <p:separator />
+		            <p:menuitem value="Pedido Atendimento" action="/pages/cadastro/pedidoAtendimentoCadastro.xhtml" icon="ui-icon-cart" />
 		        </p:submenu>
 		        
 		        <p:submenu label="Pedidos" icon="ui-icon-cart">
