--- a/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
+++ b/AtendimentoWeb/src/main/webapp/pages/listagem/comidaListagem.xhtml
@@ -19,34 +19,39 @@
 			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 			<h:panelGroup id="comidas">
 				<div class="divPai">
-					<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
-						<div class="divFilha">
-							<p:fieldset legend="#{comida.nome}" >
-								<p:outputLabel value="Local: #{comida.pendentesLocal}" style="margin-right: 10px;" />
-								<p:outputLabel value="Viagem: #{comida.pendentesViagem}"  style="margin-right: 10px;"  />
-								<p:outputLabel value="Total: #{comida.pendentesTotal}"  style="margin-right: 10px;"  />
-								<p:dataTable var="item" value="#{comida.itensPedidos}" emptyMessage="Sem pedidos">
-								    <p:column headerText="Cli.">
-									    <div style="background-color: #{item.situacaoPedido.corFundo}" onclick="alert('Feito por #{item.pedido.usuario.nome}\nObservações: #{item.observacao}')">
-									         <h:outputText value="(!) " rendered="#{not empty item.observacao}" /><h:outputText value="#{item.pedido.cliente}" title="#{item.pedido.cliente}" />
-								        </div>
-								    </p:column>
-								    <p:column width="25px;" headerText="Loc.">
-								        <h:outputText value="#{item.quantidadeMesa}" />
-								    </p:column>
-								    <p:column width="25px;" headerText="Via.">
-								        <h:outputText value="#{item.quantidadeViagem}" />
-								    </p:column>
-								    <p:column headerText="Status">
-								        <p:selectOneMenu style="font-size:11px" onchange="pararAtualizacao();" id="produto" value="#{item.situacaoPedido}">
-								            <f:selectItems value="#{comidaListagemBean.situacoes}" />
-								            <f:ajax event="change" execute="@this" render="@form" listener="#{comidaListagemBean.atualizarItem(comida.id, item.id)}" />
-								        </p:selectOneMenu>
-								    </p:column>
-								</p:dataTable>
-							</p:fieldset>
-						</div>
-					</c:forEach>
+					<h:panelGroup rendered="#{not empty comidaListagemBean.produtos}">
+						<c:forEach var="comida" items="#{comidaListagemBean.produtos}">
+							<div class="divFilha">
+								<p:fieldset legend="#{comida.nome}" >
+									<p:outputLabel value="Local: #{comida.pendentesLocal}" style="margin-right: 10px;" />
+									<p:outputLabel value="Viagem: #{comida.pendentesViagem}"  style="margin-right: 10px;"  />
+									<p:outputLabel value="Total: #{comida.pendentesTotal}"  style="margin-right: 10px;"  />
+									<p:dataTable var="item" value="#{comida.itensPedidos}" emptyMessage="Sem pedidos">
+									    <p:column headerText="Cli.">
+										    <div style="background-color: #{item.situacaoPedido.corFundo}" onclick="alert('Feito por #{item.pedido.usuario.nome}\nObservações: #{item.observacao}')">
+										         <h:outputText value="(!) " rendered="#{not empty item.observacao}" /><h:outputText value="#{item.pedido.cliente}" title="#{item.pedido.cliente}" />
+									        </div>
+									    </p:column>
+									    <p:column width="25px;" headerText="Loc.">
+									        <h:outputText value="#{item.quantidadeMesa}" />
+									    </p:column>
+									    <p:column width="25px;" headerText="Via.">
+									        <h:outputText value="#{item.quantidadeViagem}" />
+									    </p:column>
+									    <p:column headerText="Status">
+									        <p:selectOneMenu style="font-size:11px" onchange="pararAtualizacao();" id="produto" value="#{item.situacaoPedido}">
+									            <f:selectItems value="#{comidaListagemBean.situacoes}" />
+									            <f:ajax event="change" execute="@this" render="@form" listener="#{comidaListagemBean.atualizarItem(comida.id, item.id)}" />
+									        </p:selectOneMenu>
+									    </p:column>
+									</p:dataTable>
+								</p:fieldset>
+							</div>
+						</c:forEach>
+					</h:panelGroup>
+					<h:panelGroup rendered="#{empty comidaListagemBean.produtos}">
+						Nenhum pedido de comida no momento
+					</h:panelGroup>
 				</div>
 				<p:dialog header="Alterar Quantidade" widgetVar="modalQuant" modal="true" resizable="false" closable="false" minWidth="500" width="500" height="250">
 				    <h:panelGroup id="camposEdicao">
